<resources>
    <string name="app_name">JamProject</string>
    <string name="m_Usuario">User</string>
    <string name="m_Contraseña">Password</string>
    <string name="m_Contraseña2">Repeat the password</string>
    <string name="m_ContraseñaDiferentes">Passwords don\'t match</string>
    <string name="m_Entrar">Enter</string>
    <string name="m_Salir">Exit</string>
    <string name="m_Registrarse">Sign up</string>
    <string name="m_RegistrateAqui">Sign up here</string>
    <string name="m_Empezar">Let\'s begin!</string>
    <string name="m_Bienvenido">Welcome,</string>
    <string name="m_Guardar">Add meal</string>
    <string name="m_Nota">Write your note here:</string>
    <string name="m_Atencion">Attention!</string>
    <string name="m_Notificacion">Note wil be recorded</string>
    <string name="m_Cancelar">Cancell</string>
    <string name="m_Contraseñas">Passwords don\'t match</string>
    <string name="m_NombreCogido">User name already taken</string>
    <string name="m_Datos">Wrong user or password</string>
    <string name="m_Vacio">Write something first</string>
    <string name="m_Idioma">Languaje</string>
    <string name="m_Novedad">New!</string>
    <string name="m_NotaGuardada">The note was recorded</string>
    <string name="m_Estilos">Change the colors!</string>
    <string name="m_RF">Fire red style</string>
    <string name="m_VH">Leaf green style</string>
    <string name="m_AA">Water blue style</string>
    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string name="m_Borrar">Delete</string>
    <string name="m_Si">Yes</string>
    <string name="m_No">No</string>
    <string name="m_FCM">Are you hungry?</string>
    <string name="m_GuardarFoto">Add Photo</string>
    <string name="m_Modificar">Modify</string>

    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>


    <string-array name="styles">
        <item>@string/m_VH</item>
        <item>@string/m_RF</item>
        <item>@string/m_AA</item>
    </string-array>
    <string name="m_IdiomaCogido">en_GB</string>
    <string name="m_Recetas">Meals</string>
    <string name="m_Alta">Sign up</string>
    <string name="m_Calendario">Calendar</string>
    <string name="m_Perfil">Profile</string>
    <string name="m_Nombre">Your name:</string>
    <string name="m_Estilo">Your style:</string>
    <string name="m_DadoDeAlta">Suscribed:</string>
    <string name="m_Localizacion">Map:</string>
    <string name="m_Direccion">Adress:</string>
    <string name="m_Pass">Your password:</string>
    <string name="m_NombrePlato">dishName</string>
    <string name="m_DescripcionPlato">dishDescription</string>
    <string name="m_IngredientesPlato">dishIngredients</string>
    <string name="m_RecetaPlato">dishRecipe</string>
    <string name="m_Añadir">Add</string>
    <string name="m_RellenarCampos">You must fill all the fields</string>
    <string name="m_ModificacionCorrecta">Correct modification</string>
    <string name="m_SacarFoto">Take a picture</string>
    <string name="m_Galeria">Choose from gallery</string>
    <string name="m_ModificarImagen">Modify image</string>


</resources>
