<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context="es.jduque004.practicagrupal.Perfil">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:src="@drawable/defaultprofile"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btnModificarImagen"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="127dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_Nombre"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="187dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TVnombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="207dp" />

            <Button
                android:id="@+id/btnModificarNombre"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="187dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_Pass"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="227dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="106dp"
                android:layout_height="16dp"
                android:text="******"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="247dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnModificarContraseña"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="227dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_Estilo"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="267dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TVEstilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="287dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnModificarEstilo"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="267dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_DadoDeAlta"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="307dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TVAlta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="327dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnModificarAlta"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="307dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_Direccion"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="347dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TVDirecction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="367dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnModificarDireccion"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="347dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_Localizacion"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="387dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TVLocalizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_x="6dp"
                android:layout_y="192dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="344dp" />

            <Button
                android:id="@+id/btnModificarLocalizacion"
                android:layout_width="138dp"
                android:layout_height="40dp"
                android:text="@string/m_Modificar"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="387dp"
                />

        </LinearLayout>
    </ScrollView>





</LinearLayout>